--- a/ulx3s/Makefile
+++ b/ulx3s/Makefile
@@ -1,7 +1,7 @@
 VERILOG = ../src/trs80.v ../src/dpram.v ../src/keyboard.v ../src/rom.v \
 	  ../src/Z80/tv80_core.v ../src/Z80/tv80n.v ../src/Z80/tv80_mcode.v \
 	  ../src/Z80/tv80_reg.v ../src/Z80/tv80_alu.v \
-	  ../src/video.v ../src/hdmi.v ../src/ps2.v pll.v
+	  ../src/video.v ../src/hdmi.v ../src/ps2.v ../src/rom16.v pll.v
 
 PIN_DEF = ulx3s_v20.lpf
 
