--- a/ulx3s/Makefile
+++ b/ulx3s/Makefile
@@ -1,7 +1,9 @@
 VERILOG = ../src/trs80.v ../src/dpram.v ../src/keyboard.v ../src/rom.v \
 	  ../src/Z80/tv80_core.v ../src/Z80/tv80n.v ../src/Z80/tv80_mcode.v \
 	  ../src/Z80/tv80_reg.v ../src/Z80/tv80_alu.v \
-	  ../src/video.v ../src/hdmi.v ../src/ps2.v ../src/rom16.v pll.v
+	  ../src/video.v ../src/hdmi.v ../src/ps2.v ../src/rom16.v pll.v \
+	  ../src/osd/osd.v ../src/osd/spi_osd.v \
+	  ../src/osd/spi_ram_btn.v ../src/osd/spirw_slave_v.v \
 
 PIN_DEF = ulx3s_v20.lpf
 
